--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<h2 class="major">活動日期</h2>
 								<p>
 									<ul>
-										<li style="padding-bottom:6px">09/15（四）新生說明會</li>
+										<li style="padding-bottom:6px">09/13（二）新生說明會</li>
 										<li style="padding-bottom:6px">10/05（三）社烤</li>
 										<li style="padding-bottom:6px">10/21（五）期初茶會</li>
 										<li style="padding-bottom:6px">11/14（一）～11/18（五）期中木吉他</li>
