--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 										<li style="padding-bottom:3px">器材若有損毀請立刻馬上通知幹部，有任何人損壞社辦器材且不當一回事，將照價索賠，並禁止使用練團室及器材、樂器一個月。</li>
 									</ul>
 										<p style="color:rgb(220, 191, 148) ; padding-bottom:3px ; font-weight: 400; "> 10：00～20：00 社辦自由開放不鎖門，請大家誠實，維護社團環境及安全。</p>
-									<h3>驗團室</h3>
+									<h3>練團室</h3>
 									<ul>
 										<li style="padding-bottom:3px">禁止飲食。</li>
 										<li style="padding-bottom:3px">有器材使用或是整理的問題請洽幹部，不要隨意擺放。</li>
@@ -93,10 +93,10 @@
 									<ul>
 										<li style="padding-bottom:4px">主　唱：每周一／18:00～19:00／H204 教室</li>
 										<li style="padding-bottom:4px">爵士鼓：每周二／12:00～13:00／社辦內練團室</li>
+										<li style="padding-bottom:4px">　KB　：每周二／18:00～19:00／社辦內練團室</li>
 										<li style="padding-bottom:4px">木吉他：每周三／12:00～13:00／H201 教室</li>
 										<li style="padding-bottom:4px">貝　斯：每周三／18:00～19:00／社辦內練團室</li>
 										<li style="padding-bottom:4px">電吉他：每周四／12:00～13:00／木地板教室</li>
-										<li style="padding-bottom:4px">　KB　：每周四／18:00～19:00／社辦內練團室</li>
 									</ul>
 								</p>
 								
